# yada

./: README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_basic_args.py  test_get_origin.py  test_mixed_enum_str.py  test_multiple_dataclasses.py  test_nested_args.py  test_optional_args.py  test_optional_str.py
yada/: __init__.py  argname.py  exceptions.py  ns_parser.py  string_parser.py  yada.py
